--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.3",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.5",
     "react-player": "^2.11.2",
-    "react-webcam": "^7.0.1"
+    "react-webcam": "^7.0.1",
+    "roboflow": "^0.1.0"
   }
 }
