--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.3",
     "react-hot-toast": "^2.4.0",
+    "react-joystick-component": "^6.2.0",
     "react-markdown": "^8.0.5",
     "react-player": "^2.11.2",
     "react-webcam": "^7.0.1",
