--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.54.0",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^4.2.0",
+    "d3": "^7.8.5",
     "firebase": "^9.17.1",
     "lodash.debounce": "^4.0.8",
     "next": "13.2.1",
@@ -26,8 +27,7 @@
     "react-joystick-component": "^6.2.0",
     "react-markdown": "^8.0.5",
     "react-player": "^2.11.2",
-    "react-webcam": "^7.0.1",
-    "roboflow": "^0.1.0"
+    "react-webcam": "^7.0.1"
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.7",
