--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "d3": "^7.8.5",
     "firebase": "^9.17.1",
     "lodash.debounce": "^4.0.8",
-    "next": "13.2.1",
+    "next": "^13.5.6",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
